--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://peacefulparents.ca/"
 languageCode = "en-us"
 title = "Carla Hunt - Parenting Consultant"
 theme = "hugo-scroll"
